--- a/.htaccess
+++ b/.htaccess
@@ -15,3 +15,5 @@
 # Opcional: redirecionar URLs com extens√£o .php para a vers√£o sem extens√£o
 # RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
 # RewriteRule ^ %1 [R=301,L]
+# Forè´Æar HTTPS
+
